--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <!-- Navbar / Hero -->
+  <!-- Navbar -->
   <header class="navbar">
     <div class="logo">Time for Games</div>
     <nav>
@@ -18,6 +18,7 @@
     </nav>
   </header>
 
+  <!-- Hero Section -->
   <section id="hero" class="section-hero">
     <h1>Welcome to Time for Games</h1>
     <p>Your one-stop shop for games and collectibles!</p>
@@ -29,7 +30,7 @@
     <p>We offer unique games, collectibles, and fun finds — updated regularly from our eBay store.</p>
   </section>
 
-  <!-- eBay Listings -->
+  <!-- eBay Listings Section -->
   <section id="ebay-listings" class="section-ebay">
     <h2>Our eBay Listings</h2>
     <div id="listings-container">Loading listings...</div>
@@ -63,23 +64,36 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // eBay Listings
-    const appId = "TimeForG-pto-PRD-90d9b7bdf-22df4e67"; // your App ID
-    const seller = "timeforgamesllc";
     const listingsContainer = document.getElementById("listings-container");
 
-async function fetchEbayListings() {
-  try {
-    const response = await fetch("https://b8718bb7-2223-4ca5-a938-6229ca20b5a7-00-2xz7fedpuvcf4.spock.replit.dev/listings");
-    const data = await response.json();
-    displayListings(data.itemSummaries || []);
-  } catch (error) {
-    listingsContainer.innerHTML = "<p>Unable to load listings right now.</p>";
-    console.error(error);
-  }
-}
+    async function fetchEbayListings() {
+      try {
+        const response = await fetch("https://b8718bb7-2223-4ca5-a938-6229ca20b5a7-00-2xz7fedpuvcf4.spock.replit.dev/listings");
+        const data = await response.json();
+        displayListings(data.itemSummaries || []);
+      } catch (error) {
+        listingsContainer.innerHTML = "<p>Unable to load listings right now.</p>";
+        console.error(error);
+      }
+    }
 
-fetchEbayListings();
+    function displayListings(items) {
+      if (items.length === 0) {
+        listingsContainer.innerHTML = "<p>No listings found.</p>";
+        return;
+      }
+
+      listingsContainer.innerHTML = items.map(item => `
+        <div class="listing-card">
+          <img src="${item.image.imageUrl}" alt="${item.title}">
+          <h3>${item.title}</h3>
+          <p>$${item.price.value} ${item.price.currency}</p>
+          <a href="${item.itemWebUrl}" target="_blank">View on eBay</a>
+        </div>
+      `).join('');
+    }
+
+    fetchEbayListings();
   </script>
 
 </body>
