--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Navbar -->
   <header class="navbar">
     <div class="logo">Time for Games</div>
     <nav>
@@ -17,7 +16,6 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
   <section id="hero" class="section hero">
     <div class="hero-text">
       <h1>Welcome to Time for Games</h1>
@@ -25,22 +23,17 @@
     </div>
   </section>
 
-  <!-- About Section -->
   <section id="about" class="section about">
     <h2>About Time for Games</h2>
     <p>We specialize in rare and collectible games. Check out our eBay store for the latest listings!</p>
     <img src="https://via.placeholder.com/600x300.png?text=About+Time+for+Games" alt="About">
   </section>
 
-  <!-- eBay Listings Section -->
   <section id="ebay" class="section ebay">
     <h2>Our eBay Listings</h2>
-    <div id="listings" class="grid">
-      <p>Loading listings...</p>
-    </div>
+    <div id="listings" class="grid"></div>
   </section>
 
-  <!-- Socials Section -->
   <section id="socials" class="section socials">
     <h2>Follow Us</h2>
     <div class="social-grid">
@@ -59,15 +52,10 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <p>© <span id="year"></span> Time for Games | Powered by GitHub Pages</p>
   </footer>
 
 <script src="script.js"></script>
-<script>
-  // Set current year in footer
-  document.getElementById("year").textContent = new Date().getFullYear();
-</script>
 </body>
 </html>
