--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Navbar -->
   <header class="navbar">
-    <div class="logo">Time for Games</div>
+    <div class="logo">
+      <a href="#hero">Time for Games</a>
+    </div>
     <nav>
       <a href="#about">About</a>
       <a href="#ebay">eBay Listings</a>
@@ -16,6 +19,7 @@
     </nav>
   </header>
 
+  <!-- Hero Section -->
   <section id="hero" class="section hero">
     <div class="hero-text">
       <h1>Welcome to Time for Games</h1>
@@ -23,17 +27,20 @@
     </div>
   </section>
 
+  <!-- About Section -->
   <section id="about" class="section about">
     <h2>About Time for Games</h2>
     <p>We specialize in rare and collectible games. Check out our eBay store for the latest listings!</p>
     <img src="https://via.placeholder.com/600x300.png?text=About+Time+for+Games" alt="About">
   </section>
 
+  <!-- eBay Listings Section -->
   <section id="ebay" class="section ebay">
     <h2>Our eBay Listings</h2>
-    <div id="listings" class="grid"></div>
+    <div id="listings"></div>
   </section>
 
+  <!-- Socials Section -->
   <section id="socials" class="section socials">
     <h2>Follow Us</h2>
     <div class="social-grid">
@@ -52,6 +59,7 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>© <span id="year"></span> Time for Games | Powered by GitHub Pages</p>
   </footer>
