--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Time for Games | eBay Listings</title>
+  <title>Time for Games</title>
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
@@ -12,7 +12,7 @@
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo">
-      <a href="#hero">Time for Games</a>
+      <a href="#hero">timeforgames</a>
     </div>
     <nav>
       <a href="#about">About</a>
