--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Time for Games</title>
-  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&display=swap" rel="stylesheet">
+  <title>Time for Games | eBay Listings</title>
+
+  <!-- Styles -->
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Favicon (optional) -->
+  <link rel="icon" type="image/png" href="https://via.placeholder.com/32.png?text=T" />
 </head>
 <body>
+
   <!-- Navbar -->
   <header class="navbar">
-    <div class="logo">
-      <a href="#hero">timeforgames</a>
-    </div>
+    <a href="#hero" class="logo">Time for Games</a>
     <nav>
       <a href="#about">About</a>
       <a href="#ebay">eBay Listings</a>
@@ -39,7 +41,10 @@
   <!-- eBay Listings Section -->
   <section id="ebay" class="section ebay">
     <h2>Our eBay Listings</h2>
-    <div id="listings"></div>
+    <div id="listings-container" class="listings-grid">
+      <div id="loading">Loading listings...</div>
+      <div id="listings" class="grid"></div>
+    </div>
   </section>
 
   <!-- Socials Section -->
@@ -66,6 +71,12 @@
     <p>© <span id="year"></span> Time for Games | Powered by GitHub Pages</p>
   </footer>
 
-<script src="script.js"></script>
+  <!-- Script -->
+  <script src="script.js"></script>
+  <script>
+    // Auto update footer year
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+
 </body>
 </html>
