--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <!-- Navigation / Hero -->
   <header class="hero">
-    <a href="#home" class="logo">Time For Games</a>
+    <a href="#home" class="logo">timeforgames</a>
     <nav>
       <a href="#about">About</a>
       <a href="#ebay">eBay Listings</a>
