--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>timeforgames | eBay Listings</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre&family=Henny+Penny&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
