--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <section id="hero" class="section hero">
     <div class="hero-text">
       <h1>Welcome to Time for Games</h1>
-      <p>Discover unique games, collectibles, and fun finds!</p>
+      <p>Here to bring Japanese cards to the US market and give retro consoles a second life!</p>
     </div>
   </section>
 
   <!-- About Section -->
   <section id="about" class="section about">
     <h2>About Time for Games</h2>
-    <p>We specialize in rare and collectible games. Check out our eBay store for the latest listings!</p>
+    <p>We've been collecting for 20+ years and are trying to bring the Japanese Pokemon TCG to the US consumer at an affordable price. We also specialize in bringing retro consoles back to life for a second chance.</p>
     <img src="https://via.placeholder.com/600x300.png?text=About+Time+for+Games" alt="About">
   </section>
 
