--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
   <section id="about" class="section about">
     <h2>About Time for Games</h2>
     <p>We've been collecting for 20+ years and are trying to bring the Japanese Pokemon TCG to the US consumer at an affordable price. We also specialize in bringing retro consoles back to life for a second chance.</p>
-    <img src="https://via.placeholder.com/600x300.png?text=About+Time+for+Games" alt="About">
   </section>
 
   <!-- eBay Listings Section -->
   <section id="ebay" class="section ebay">
-    <h2>Our eBay Listings</h2>
+    <h2>Examples of Our eBay Listings</h2>
     <div id="listings" class="listings-grid"></div>
   </section>
 
@@ -45,17 +44,14 @@
   <section id="socials" class="section socials">
     <h2>Follow Us</h2>
     <div class="social-grid">
-      <a href="#" target="_blank" class="social-card">
-        <img src="https://via.placeholder.com/300x200.png?text=Instagram" alt="Instagram">
-        <div class="overlay-text">Instagram</div>
+      <a href="https://www.tiktok.com/@timeforgamesllc" target="_blank" class="social-card">
+        <img src="http://i.picasion.com/gl/92/kWH5.gif" alt="Instagram">
       </a>
       <a href="#" target="_blank" class="social-card">
-        <img src="https://via.placeholder.com/300x200.png?text=Facebook" alt="Facebook">
-        <div class="overlay-text">Facebook</div>
+        <img src="http://i.picasion.com/gl/92/kWH3.gif" alt="Twitter">
       </a>
-      <a href="#" target="_blank" class="social-card">
-        <img src="https://via.placeholder.com/300x200.png?text=YouTube" alt="YouTube">
-        <div class="overlay-text">YouTube</div>
+      <a href="youtube.com/@timeforgamesllc" target="_blank" class="social-card">
+        <img src="http://i.picasion.com/gl/92/kWGX.gif" alt="YouTube">
       </a>
     </div>
   </section>
