--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Navbar -->
   <header class="navbar">
-    <div class="logo">timeforgames</div>
+    <a href="#hero" class="logo">timeforgames</a>
     <nav>
       <a href="#about">About</a>
       <a href="#ebay">eBay Listings</a>
